# ciallo_vit

./: .gitignore  README.md  pyproject.toml  test_export.py
ciallo_vit/: model.py
tests/: test_export.py
