[project]
name = "ciallo_vit"
version = "0.1.0"
readme = "README.md"
authors = [{name = "He Gaoxiang", email = "hegaoxiang@nudt.edu.cn"}]
dependencies = [
    "numpy",
    "torch",
    "lightning",
    "torchvision",
    "onnx",
    "onnxscript",
    "onnxruntime",
    "pytest",
    "lark",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ciallo_vit"]
package-data = {"ciallo_vit"=["*.py", "*.md", "LICENSE", "README.md"]}